Updated for change batch size per 20 epochs

--- a/Assignment10/Hw10.ipynb
+++ b/Assignment10/Hw10.ipynb
@@ -114,7 +114,6 @@
     "# First Layer\n",
     "CNN.add(Conv2D(16, (5, 5), strides=1, input_shape=(64, 64, 3)))\n",
     "\n",
-    "\n",
     "# Second Layer\n",
     "CNN.add(Conv2D(16, (5, 5), strides=1))\n",
     "\n",
@@ -171,118 +170,297 @@
     }
    ],
    "source": [
-    "optim = optimizers.Adam(learning_rate=0.001)\n",
-    "CNN.compile(optimizer=optim, loss='mean_squared_error', metrics=['accuracy'])\n",
+    "optim = optimizers.Adam(learning_rate=0.0001)\n",
+    "CNN.compile(optimizer=optim, loss='mean_squared_error')\n",
     "CNN.summary()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "=-=-=-=-=-=-=-=-= Batch Size  32  =-=-=-=-=-=-=-=-=\n",
       "Train on 18059 samples\n",
       "Epoch 1/20\n",
-      "18059/18059 [==============================] - 4s 213us/sample - loss: 2957.6895 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 5s - loss: 800.5002\n",
       "Epoch 2/20\n",
-      "18059/18059 [==============================] - 2s 98us/sample - loss: 470.2229 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 360.7324\n",
       "Epoch 3/20\n",
-      "18059/18059 [==============================] - 2s 99us/sample - loss: 388.3148 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 272.0849\n",
       "Epoch 4/20\n",
-      "18059/18059 [==============================] - 2s 101us/sample - loss: 337.5598 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 216.4255\n",
       "Epoch 5/20\n",
-      "18059/18059 [==============================] - 2s 99us/sample - loss: 294.5666 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 178.1774\n",
       "Epoch 6/20\n",
-      "18059/18059 [==============================] - 2s 99us/sample - loss: 264.7538 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 153.5256\n",
       "Epoch 7/20\n",
-      "18059/18059 [==============================] - 2s 114us/sample - loss: 235.8978 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 136.2219\n",
       "Epoch 8/20\n",
-      "18059/18059 [==============================] - 2s 111us/sample - loss: 209.5289 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 123.2112\n",
       "Epoch 9/20\n",
-      "18059/18059 [==============================] - 2s 103us/sample - loss: 191.7102 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 116.9183\n",
       "Epoch 10/20\n",
-      "18059/18059 [==============================] - 2s 107us/sample - loss: 172.1065 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 106.8231\n",
       "Epoch 11/20\n",
-      "18059/18059 [==============================] - 2s 102us/sample - loss: 160.6291 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 101.7645\n",
       "Epoch 12/20\n",
-      "18059/18059 [==============================] - 2s 98us/sample - loss: 141.4312 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 96.2141\n",
       "Epoch 13/20\n",
-      "18059/18059 [==============================] - 2s 98us/sample - loss: 133.4036 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 89.9674\n",
       "Epoch 14/20\n",
-      "18059/18059 [==============================] - 2s 99us/sample - loss: 126.4377 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 87.7351\n",
       "Epoch 15/20\n",
-      "18059/18059 [==============================] - 2s 98us/sample - loss: 123.8504 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 83.9449\n",
       "Epoch 16/20\n",
-      "18059/18059 [==============================] - 2s 100us/sample - loss: 114.1155 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 79.1601\n",
       "Epoch 17/20\n",
-      "18059/18059 [==============================] - 2s 99us/sample - loss: 109.7909 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 74.8855\n",
       "Epoch 18/20\n",
-      "18059/18059 [==============================] - 2s 99us/sample - loss: 101.9837 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 72.6592\n",
       "Epoch 19/20\n",
-      "18059/18059 [==============================] - 2s 98us/sample - loss: 103.4539 - accuracy: 0.0000e+00\n",
+      "18059/18059 - 3s - loss: 70.3451\n",
       "Epoch 20/20\n",
-      "18059/18059 [==============================] - 2s 98us/sample - loss: 93.3566 - accuracy: 0.0000e+00\n"
+      "18059/18059 - 3s - loss: 66.3218\n",
+      "Train R2:  0.8710399554489809\n",
+      "Test R2:  0.8238654394376622\n",
+      "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+      "\n",
+      "\n",
+      "=-=-=-=-=-=-=-=-= Batch Size  64  =-=-=-=-=-=-=-=-=\n",
+      "Train on 18059 samples\n",
+      "Epoch 1/20\n",
+      "18059/18059 - 2s - loss: 60.0184\n",
+      "Epoch 2/20\n",
+      "18059/18059 - 2s - loss: 57.4539\n",
+      "Epoch 3/20\n",
+      "18059/18059 - 2s - loss: 56.4338\n",
+      "Epoch 4/20\n",
+      "18059/18059 - 2s - loss: 55.1859\n",
+      "Epoch 5/20\n",
+      "18059/18059 - 2s - loss: 53.8523\n",
+      "Epoch 6/20\n",
+      "18059/18059 - 2s - loss: 54.7500\n",
+      "Epoch 7/20\n",
+      "18059/18059 - 2s - loss: 52.9083\n",
+      "Epoch 8/20\n",
+      "18059/18059 - 2s - loss: 50.6399\n",
+      "Epoch 9/20\n",
+      "18059/18059 - 2s - loss: 50.0573\n",
+      "Epoch 10/20\n",
+      "18059/18059 - 2s - loss: 48.7887\n",
+      "Epoch 11/20\n",
+      "18059/18059 - 2s - loss: 47.3787\n",
+      "Epoch 12/20\n",
+      "18059/18059 - 2s - loss: 47.3907\n",
+      "Epoch 13/20\n",
+      "18059/18059 - 2s - loss: 45.0354\n",
+      "Epoch 14/20\n",
+      "18059/18059 - 2s - loss: 45.5827\n",
+      "Epoch 15/20\n",
+      "18059/18059 - 2s - loss: 42.9352\n",
+      "Epoch 16/20\n",
+      "18059/18059 - 2s - loss: 42.4876\n",
+      "Epoch 17/20\n",
+      "18059/18059 - 2s - loss: 43.4783\n",
+      "Epoch 18/20\n",
+      "18059/18059 - 2s - loss: 41.1076\n",
+      "Epoch 19/20\n",
+      "18059/18059 - 2s - loss: 42.1407\n",
+      "Epoch 20/20\n",
+      "18059/18059 - 2s - loss: 39.6361\n",
+      "Train R2:  0.9337358851491372\n",
+      "Test R2:  0.8866234534041019\n",
+      "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+      "\n",
+      "\n",
+      "=-=-=-=-=-=-=-=-= Batch Size  128  =-=-=-=-=-=-=-=-=\n",
+      "Train on 18059 samples\n",
+      "Epoch 1/20\n",
+      "18059/18059 - 2s - loss: 37.8548\n",
+      "Epoch 2/20\n",
+      "18059/18059 - 2s - loss: 37.2531\n",
+      "Epoch 3/20\n",
+      "18059/18059 - 2s - loss: 35.8128\n",
+      "Epoch 4/20\n",
+      "18059/18059 - 2s - loss: 36.9118\n",
+      "Epoch 5/20\n",
+      "18059/18059 - 2s - loss: 36.6101\n",
+      "Epoch 6/20\n",
+      "18059/18059 - 2s - loss: 37.7817\n",
+      "Epoch 7/20\n",
+      "18059/18059 - 2s - loss: 35.4639\n",
+      "Epoch 8/20\n",
+      "18059/18059 - 2s - loss: 34.6499\n",
+      "Epoch 9/20\n",
+      "18059/18059 - 2s - loss: 35.2694\n",
+      "Epoch 10/20\n",
+      "18059/18059 - 2s - loss: 35.1701\n",
+      "Epoch 11/20\n",
+      "18059/18059 - 2s - loss: 34.8047\n",
+      "Epoch 12/20\n",
+      "18059/18059 - 2s - loss: 34.9255\n",
+      "Epoch 13/20\n",
+      "18059/18059 - 2s - loss: 33.8523\n",
+      "Epoch 14/20\n",
+      "18059/18059 - 2s - loss: 33.5465\n",
+      "Epoch 15/20\n",
+      "18059/18059 - 2s - loss: 33.9427\n",
+      "Epoch 16/20\n",
+      "18059/18059 - 2s - loss: 33.8184\n",
+      "Epoch 17/20\n",
+      "18059/18059 - 2s - loss: 33.9379\n",
+      "Epoch 18/20\n",
+      "18059/18059 - 2s - loss: 32.8874\n",
+      "Epoch 19/20\n",
+      "18059/18059 - 2s - loss: 33.2264\n",
+      "Epoch 20/20\n",
+      "18059/18059 - 2s - loss: 32.3690\n",
+      "Train R2:  0.9512817010347312\n",
+      "Test R2:  0.9053219296131275\n",
+      "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+      "\n",
+      "\n",
+      "=-=-=-=-=-=-=-=-= Batch Size  256  =-=-=-=-=-=-=-=-=\n",
+      "Train on 18059 samples\n",
+      "Epoch 1/20\n",
+      "18059/18059 - 2s - loss: 31.1075\n",
+      "Epoch 2/20\n",
+      "18059/18059 - 1s - loss: 31.2455\n",
+      "Epoch 3/20\n",
+      "18059/18059 - 1s - loss: 29.7289\n",
+      "Epoch 4/20\n",
+      "18059/18059 - 1s - loss: 30.0374\n",
+      "Epoch 5/20\n",
+      "18059/18059 - 2s - loss: 30.5563\n",
+      "Epoch 6/20\n",
+      "18059/18059 - 2s - loss: 30.4516\n",
+      "Epoch 7/20\n",
+      "18059/18059 - 1s - loss: 29.9472\n",
+      "Epoch 8/20\n",
+      "18059/18059 - 1s - loss: 29.6349\n",
+      "Epoch 9/20\n",
+      "18059/18059 - 2s - loss: 29.4963\n",
+      "Epoch 10/20\n",
+      "18059/18059 - 2s - loss: 29.5447\n",
+      "Epoch 11/20\n",
+      "18059/18059 - 2s - loss: 29.1173\n",
+      "Epoch 12/20\n",
+      "18059/18059 - 2s - loss: 29.8618\n",
+      "Epoch 13/20\n",
+      "18059/18059 - 1s - loss: 29.9627\n",
+      "Epoch 14/20\n",
+      "18059/18059 - 1s - loss: 29.6157\n",
+      "Epoch 15/20\n",
+      "18059/18059 - 2s - loss: 28.5867\n",
+      "Epoch 16/20\n",
+      "18059/18059 - 2s - loss: 29.0514\n",
+      "Epoch 17/20\n",
+      "18059/18059 - 2s - loss: 28.4430\n",
+      "Epoch 18/20\n",
+      "18059/18059 - 2s - loss: 29.0528\n",
+      "Epoch 19/20\n",
+      "18059/18059 - 2s - loss: 28.6182\n",
+      "Epoch 20/20\n",
+      "18059/18059 - 1s - loss: 29.3962\n",
+      "Train R2:  0.9541813430932267\n",
+      "Test R2:  0.9084330355782635\n",
+      "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+      "\n",
+      "\n",
+      "=-=-=-=-=-=-=-=-= Batch Size  512  =-=-=-=-=-=-=-=-=\n",
+      "Train on 18059 samples\n",
+      "Epoch 1/20\n",
+      "18059/18059 - 2s - loss: 27.5566\n",
+      "Epoch 2/20\n",
+      "18059/18059 - 1s - loss: 26.9751\n",
+      "Epoch 3/20\n",
+      "18059/18059 - 1s - loss: 26.9428\n",
+      "Epoch 4/20\n",
+      "18059/18059 - 1s - loss: 27.0350\n",
+      "Epoch 5/20\n",
+      "18059/18059 - 1s - loss: 26.9945\n",
+      "Epoch 6/20\n",
+      "18059/18059 - 1s - loss: 27.1956\n",
+      "Epoch 7/20\n",
+      "18059/18059 - 1s - loss: 26.9150\n",
+      "Epoch 8/20\n",
+      "18059/18059 - 1s - loss: 26.5750\n",
+      "Epoch 9/20\n",
+      "18059/18059 - 1s - loss: 26.8063\n",
+      "Epoch 10/20\n",
+      "18059/18059 - 1s - loss: 26.9449\n",
+      "Epoch 11/20\n",
+      "18059/18059 - 1s - loss: 28.4359\n",
+      "Epoch 12/20\n",
+      "18059/18059 - 1s - loss: 27.1304\n",
+      "Epoch 13/20\n",
+      "18059/18059 - 1s - loss: 26.6983\n",
+      "Epoch 14/20\n",
+      "18059/18059 - 1s - loss: 26.4836\n",
+      "Epoch 15/20\n",
+      "18059/18059 - 1s - loss: 26.5105\n",
+      "Epoch 16/20\n",
+      "18059/18059 - 1s - loss: 26.8107\n",
+      "Epoch 17/20\n",
+      "18059/18059 - 1s - loss: 26.4969\n",
+      "Epoch 18/20\n",
+      "18059/18059 - 1s - loss: 26.6485\n",
+      "Epoch 19/20\n",
+      "18059/18059 - 1s - loss: 26.2919\n",
+      "Epoch 20/20\n",
+      "18059/18059 - 1s - loss: 26.3243\n",
+      "Train R2:  0.9584168549214286\n",
+      "Test R2:  0.9083058184890217\n",
+      "=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1f4275c2748>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "CNN.fit(xtrain, ytrain, epochs=20, batch_size = 128, verbose=1)"
+    "batches = [32, 64, 128, 256, 512]\n",
+    "\n",
+    "for b in batches:\n",
+    "    print(\"\\n=-=-=-=-=-=-=-=-= Batch Size \", b, \" =-=-=-=-=-=-=-=-=\")\n",
+    "   \n",
+    "    CNN.fit(xtrain, ytrain, epochs=20, batch_size = b, verbose=2)\n",
+    "    \n",
+    "    preds = CNN.predict(xtrain)\n",
+    "    score = r2_score(ytrain, preds)\n",
+    "    print(\"Train R2: \", score)\n",
+    "    \n",
+    "    preds = CNN.predict(xtest)\n",
+    "    score = r2_score(ytest, preds)\n",
+    "    print(\"Test R2: \", score)\n",
+    "    print(\"=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\\n\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8462946162967031"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "preds = CNN.predict(xtrain)\n",
-    "r2_score(ytrain, preds)"
+    "#preds = CNN.predict(xtrain)\n",
+    "#r2_score(ytrain, preds)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7868757029922637"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "preds = CNN.predict(xtest)\n",
-    "r2_score(ytest, preds)"
+    "#preds = CNN.predict(xtest)\n",
+    "#r2_score(ytest, preds)"
    ]
   },
   {
