partial implementation of forward_backward algo

--- a/Assignment11/Hw11.ipynb
+++ b/Assignment11/Hw11.ipynb
@@ -80,6 +80,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fwd_bkw(observations, states, start_prob, trans_prob, emm_prob, end_st):\n",
+    "    # forward part of the algorithm\n",
+    "    fwd = []\n",
+    "    f_prev = {}\n",
+    "    for i, observation_i in enumerate(observations):\n",
+    "        f_curr = {}\n",
+    "        for st in states:\n",
+    "            if i == 0:\n",
+    "                # base case for the forward part\n",
+    "                prev_f_sum = start_prob[st]\n",
+    "            else:\n",
+    "                prev_f_sum = sum(f_prev[k]*trans_prob[k][st] for k in states)\n",
+    "\n",
+    "            f_curr[st] = emm_prob[st][observation_i] * prev_f_sum\n",
+    "            if i == 114:\n",
+    "                print('alpha_{k}_115 = '.format(k = st), f_curr[st])\n",
+    "\n",
+    "        fwd.append(f_curr)\n",
+    "        f_prev = f_curr\n",
+    "\n",
+    "    p_fwd = sum(f_curr[k] * trans_prob[k][end_st] for k in states)\n",
+    "\n",
+    "    # backward part of the algorithm\n",
+    "    bkw = []\n",
+    "    b_prev = {}\n",
+    "    for i, observation_i_plus in enumerate(reversed(observations[1:]+(None,))):\n",
+    "        b_curr = {}\n",
+    "        for st in states:\n",
+    "            if i == 0:\n",
+    "                # base case for backward part\n",
+    "                b_curr[st] = trans_prob[st][end_st]\n",
+    "            else:\n",
+    "                b_curr[st] = sum(trans_prob[st][l] * emm_prob[l][observation_i_plus] * b_prev[l] for l in states)\n",
+    "                if i == 114:\n",
+    "                    print('beta_{k}_115 = '.format(k = st), b_curr[st])\n",
+    "\n",
+    "\n",
+    "\n",
+    "        bkw.insert(0,b_curr)\n",
+    "        b_prev = b_curr\n",
+    "\n",
+    "    p_bkw = sum(start_prob[l] * emm_prob[l][observations[0]] * b_curr[l] for l in states)\n",
+    "\n",
+    "    # merging the two parts\n",
+    "    posterior = []\n",
+    "    for i in range(len(observations)):\n",
+    "        posterior.append({st: fwd[i][st] * bkw[i][st] / p_fwd for st in states})\n",
+    "\n",
+    "    assert p_fwd == p_bkw\n",
+    "    return fwd, bkw, posterior"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +207,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# b) \n",
+    "Refrences: https://en.wikipedia.org/wiki/Forward–backward_algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "fwd_bkw() missing 1 required positional argument: 'end_st'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-d09049cecd8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mstart_p\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mtrans_p\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         emit_p)\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: fwd_bkw() missing 1 required positional argument: 'end_st'"
+     ]
+    }
+   ],
+   "source": [
+    "fwd_bkw(obs,\n",
+    "        states,\n",
+    "        start_p,\n",
+    "        trans_p,\n",
+    "        emit_p)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Part 2"
    ]
   },
@@ -177,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
