--- a/Assignment11/Hw11.ipynb
+++ b/Assignment11/Hw11.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NAMES: Timothy Barao, Marlan McInnes-Taylor\n",
+    "# FSUIDS: tjb13b, mm05f"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -118,7 +126,7 @@
     "\n",
     "pb1, pb2 = loadData()\n",
     "\n",
-    "obs = pb1 #('normal', 'cold', 'dizzy')\n",
+    "obs = pb1 \n",
     "states = ('1', '2')\n",
     "start_p = {'1': 0.5, '2': 0.5}\n",
     "trans_p = {\n",
@@ -166,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fwd_bkw(observations, states, start_prob, trans_prob, emm_prob, end_st):\n",
+    "def fwd_bkw(observations, states, start_prob, trans_prob, emm_prob):\n",
     "    # forward part of the algorithm\n",
     "    fwd = []\n",
     "    miu = []\n",
@@ -181,10 +189,7 @@
     "                prev_f_sum = sum(f_prev[k]*trans_prob[k][st] for k in states)\n",
     "\n",
     "            f_curr[st] = emm_prob[st][observation_i] * prev_f_sum\n",
-    "            \n",
-    "            #if i == 114:\n",
-    "            #    print('alpha_{k}_115 = '.format(k = st), f_curr[st])\n",
-    "        \n",
+    "\n",
     "        miu.append(1/(f_curr['1'] + f_curr['2']))\n",
     "        \n",
     "        for st in states:\n",
@@ -193,8 +198,6 @@
     "        fwd.append(f_curr)\n",
     "        f_prev = f_curr\n",
     "\n",
-    "    #p_fwd = sum(f_curr[k] for k in states)\n",
-    "\n",
     "    # backward part of the algorithm\n",
     "    bkw = []\n",
     "    b_prev = {}\n",
@@ -202,8 +205,7 @@
     "        b_curr = {}\n",
     "        for st in states:\n",
     "            if i == 0:\n",
-    "                # base case for backward part\n",
-    "                b_curr[st] = miu[len(miu)-1] * .1 #trans_prob[st][end_st]\n",
+    "                b_curr[st] = miu[len(miu)-1] * .1 \n",
     "            else:\n",
     "                b_curr[st] = sum(trans_prob[st][l] * emm_prob[l][observation_i_plus] * b_prev[l] for l in states)\n",
     "           \n",
@@ -214,11 +216,7 @@
     "        bkw.append(b_curr)\n",
     "        b_prev = b_curr\n",
     "\n",
-    "    #p_bkw = sum(start_prob[l] * emm_prob[l][observations[0]] * b_curr[l] for l in states)\n",
-    "\n",
-    "    # merging the two parts\n",
-    "\n",
-    "    return fwd, bkw   #, posterior"
+    "    return fwd, bkw  "
    ]
   },
   {
@@ -241,7 +239,6 @@
     "\n",
     "obs = tuple(pb1)\n",
     "states = ('1', '2')\n",
-    "end_state = '2'\n",
     "\n",
     "start_p = {'1': 0.5, '2': 0.5}\n",
     "trans_p = {\n",
@@ -263,7 +260,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1': 0.24137669730725378, '2': 0.7586233026927464} {'1': 0.4330503843609442, '2': 0.5086857770067409}\n"
+      "Alpha_1[115]:  0.24137669730725378\n",
+      "Alpha_2[115]:  0.7586233026927464\n",
+      "Beta_1[115]:  0.4330503843609442\n",
+      "Beta_2[115]:  0.5086857770067409\n"
      ]
     }
    ],
@@ -272,10 +272,14 @@
     "        states,\n",
     "        start_p,\n",
     "        trans_p,\n",
-    "        emit_p, \n",
-    "        end_state)\n",
+    "        emit_p)\n",
     "\n",
-    "print(t[0][115], t[1][115])"
+    "\n",
+    "print(\"Alpha_1[115]: \", t[0][115]['1'])\n",
+    "print(\"Alpha_2[115]: \", t[0][115]['2'])\n",
+    "\n",
+    "print(\"Beta_1[115]: \", t[1][115]['1'])\n",
+    "print(\"Beta_2[115]: \", t[1][115]['2'])\n"
    ]
   },
   {
@@ -287,25 +291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def baum_welch(n_iter=10):\n",
+    "def baum_welch(n_iter=1000):\n",
     "    for n in range(n_iter):\n",
-    "        #alpha = forward(V, a, b, initial_distribution)\n",
-    "        #beta = backward(V, a, b)\n",
-    "        \n",
     "        alpha, beta = fwd_bkw(obs,\n",
     "                                states,\n",
     "                                start_p,\n",
     "                                trans_p,\n",
-    "                                emit_p, \n",
-    "                                end_state)\n",
+    "                                emit_p)\n",
     "        gammas = {'1':[], '2':[]}\n",
     "        Eps = {'1':{'1':[], '2':[]}, '2':{'1':[], '2':[]} }\n",
     "       \n",
-    "        \n",
+    "        # a = trans_p\n",
+    "        # b = emit_p\n",
+    "        # pi = start_p\n",
+    "    \n",
     "        for t in range(len(obs)-1):\n",
     "            g = {}\n",
     "            E_1 = {}\n",
@@ -336,29 +339,24 @@
     "            \n",
     "        for st in states:\n",
     "            start_p[st] = gammas[st][0]\n",
+    "            gammas[st].append(gammas[st][-1])\n",
     "        \n",
     "            trans_p['1'][st] = sum(Eps['1'][st]) / sum(gammas['1'])\n",
     "            trans_p['2'][st] = sum(Eps['2'][st]) / sum(gammas['2']) \n",
     "            \n",
     "            V = np.array(obs)\n",
     "            \n",
+    "            # emit_p is incorrect, may not be updating properly\n",
     "            for d in range(1, 7):\n",
-    "                ind = np.where(V == d)[0]\n",
     "                gammas[st] = np.array(gammas[st])\n",
-    "                emit_p[st][d] = sum(V[np.where(V == d)] * gammas[st][np.where(V == d)-1])\n",
+    "                emit_p[st][d] = (sum(V[np.where(V == d)] * gammas[st][np.where(V == d)])) / sum(gammas[st])\n",
     "        \n",
-    "        print(n)\n",
-    "        print(start_p)\n",
-    "        print(trans_p)\n",
-    "        print(emit_p)\n",
-    "            \n",
-    "        \n",
-    "        #print(len(gammas))        \n"
+    "        print(\"\\rIteration:\", n, flush=True, end=\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,56 +368,68 @@
     "init_L = p2\n",
     "\n",
     "fair = [p3, p3, p3, p3, p3, p3]\n",
-    "loaded = [p1, p1, p1, p1, p1, p2]\n",
+    "loaded = [.20, .10, .15, .15, .20, .20]\n",
     "\n",
     "pb1, pb2 = loadData()\n",
     "\n",
     "obs = tuple(pb2)\n",
     "states = ('1', '2')\n",
-    "end_state = 'E'\n",
     "\n",
-    "start_p = {'1': 0.5, '2': 0.5}\n",
+    "start_p = {'1': 0.63, '2': 0.37}\n",
     "trans_p = {\n",
-    "   '1' : {'1': 0.94, '2': 0.05},\n",
-    "   '2' : {'1': 0.05, '2': 0.94}\n",
+    "   '1' : {'1': 0.50, '2': 0.50},\n",
+    "   '2' : {'1': 0.50, '2': 0.50}\n",
     "   }\n",
     "emit_p = {\n",
-    "   '1' : {1.: p3, 2.: p3, 3.: p3, 4.: p3, 5.: p3, 6.: p3},\n",
-    "   '2' : {1.: p1, 2.: p1, 3.: p1, 4.: p1, 5.: p1, 6.: p2}\n",
-    "   }\n",
-    "\n",
-    "initital = np.array((0.5, 0.5))\n",
-    "\n"
+    "   '1' : {1: p3, 2: p3, 3: p3, 4: p3, 5: p3, 6: p3},\n",
+    "   '2' : {1: .20, 2: .10, 3: .15, 4: .15, 5: .20, 6: .20}\n",
+    "   }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'tuple' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-3db44456bfe8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbaum_welch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-28-023680565560>\u001b[0m in \u001b[0;36mbaum_welch\u001b[0;34m(n_iter)\u001b[0m\n\u001b[1;32m     53\u001b[0m                 \u001b[0mind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m                 \u001b[0mgammas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mst\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgammas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mst\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m                 \u001b[0memit_p\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mst\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mgammas\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mst\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mV\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'tuple' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=-=-=-=-= Initial Parameters =-=-=-=-=\n",
+      "\n",
+      "\n",
+      "=-=-=-= Pi =-=-=-=\n",
+      "pi_1:  0.63\n",
+      "pi_2:  0.37\n",
+      "\n",
+      "=-=-=-= a =-=-=-=\n",
+      "a_11:  0.5\n",
+      "a_12:  0.5\n",
+      "a_21:  0.5\n",
+      "a_22:  0.5\n",
+      "\n",
+      "=-=-=-= b =-=-=-=\n",
+      "b_1, dice value: 1:  0.16666666666666666\n",
+      "b_1, dice value: 2:  0.16666666666666666\n",
+      "b_1, dice value: 3:  0.16666666666666666\n",
+      "b_1, dice value: 4:  0.16666666666666666\n",
+      "b_1, dice value: 5:  0.16666666666666666\n",
+      "b_1, dice value: 6:  0.16666666666666666\n",
+      "\n",
+      "b_2, dice value: 1:  0.2\n",
+      "b_2, dice value: 2:  0.1\n",
+      "b_2, dice value: 3:  0.15\n",
+      "b_2, dice value: 4:  0.15\n",
+      "b_2, dice value: 5:  0.2\n",
+      "b_2, dice value: 6:  0.2\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "baum_welch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(\"\\n=-=-=-=-= Initial Parameters =-=-=-=-=\\n\")\n",
+    "\n",
     "print(\"\\n=-=-=-= Pi =-=-=-=\")\n",
     "for key, value in start_p.items():\n",
     "    print(\"pi_\"+str(key)+\": \", value)\n",
@@ -439,10 +449,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 999"
+     ]
+    }
+   ],
+   "source": [
+    "baum_welch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=-=-=-=-= After Baum Welch =-=-=-=-=\n",
+      "\n",
+      "\n",
+      "=-=-=-= Pi =-=-=-=\n",
+      "pi_1:  1.5525133626075604e-125\n",
+      "pi_2:  1.0\n",
+      "\n",
+      "=-=-=-= a =-=-=-=\n",
+      "a_11:  0.9448803197580593\n",
+      "a_12:  0.05502810982619924\n",
+      "a_21:  0.1870566177449285\n",
+      "a_22:  0.8128255898183105\n",
+      "\n",
+      "=-=-=-= b =-=-=-=\n",
+      "b_1, dice value: 1:  0.20347862801432678\n",
+      "b_1, dice value: 2:  0.39865189761689535\n",
+      "b_1, dice value: 3:  0.6135995969387137\n",
+      "b_1, dice value: 4:  0.8285801096886248\n",
+      "b_1, dice value: 5:  0.46485553016469455\n",
+      "b_1, dice value: 6:  0.5552765444553702\n",
+      "\n",
+      "b_2, dice value: 1:  0.173699394999152\n",
+      "b_2, dice value: 2:  0.42214667955786417\n",
+      "b_2, dice value: 3:  0.4036108894508577\n",
+      "b_2, dice value: 4:  0.6221914967511367\n",
+      "b_2, dice value: 5:  1.1486182215165623\n",
+      "b_2, dice value: 6:  0.5725127014832095\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n=-=-=-=-= After Baum Welch =-=-=-=-=\\n\")\n",
+    "\n",
+    "print(\"\\n=-=-=-= Pi =-=-=-=\")\n",
+    "for key, value in start_p.items():\n",
+    "    print(\"pi_\"+str(key)+\": \", value)\n",
+    "\n",
+    "\n",
+    "print(\"\\n=-=-=-= a =-=-=-=\")\n",
+    "for key, value in trans_p.items():\n",
+    "    for k, v in value.items():\n",
+    "        print(\"a_\"+str(key)+str(k)+\": \", v)\n",
+    "        \n",
+    "print(\"\\n=-=-=-= b =-=-=-=\")\n",
+    "for key, value in emit_p.items():\n",
+    "    for k, v in value.items():\n",
+    "        print(\"b_\"+str(key)+\", dice value: \" + str(int(k))+\": \", v)    \n",
+    "    print(\"\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -462,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
