--- a/Assignment12/HW12.ipynb
+++ b/Assignment12/HW12.ipynb
@@ -71,8 +71,6 @@
     "faces, backgrounds = np.load('../data/hw12/Faces.data.npy'), \\\n",
     "                     np.load('../data/hw12/Backgrounds.data.npy')\n",
     "\n",
-    "im_shape = (19, 19)\n",
-    " \n",
     "face_mean = np.mean(faces, axis=0)    \n",
     "\n",
     "faces = faces - face_mean\n",
@@ -171,9 +169,10 @@
     }
    ],
    "source": [
-    "coords = np.matmul(fPCA.components_[:, 1:3].T, faces.T) # components_ represent the eivenvectors\n",
-    "                                                        # [:, 1:3] grab the vectors associated with second and third\n",
-    "                                                        # largest eigenvalues\n",
+    "# components_ represent the eivenvectors\n",
+    "# [:, 1:3] grab the vectors associated with second and third\n",
+    "# largest eigenvalues\n",
+    "coords = np.matmul(fPCA.components_[:, 1:3].T, faces.T)\n",
     "plt.scatter(coords[0], coords[1])\n",
     "plt.title(\"Faces Projections\")"
    ]
@@ -214,11 +213,7 @@
     }
    ],
    "source": [
-    "# subtract the mean of faces from the backgrounds\n",
-    "\n",
-    "b_coords = np.matmul(fPCA.components_[:, 1:3].T, backgrounds.T) # components_ represent the eivenvectors\n",
-    "                                                        # [:, 1:3] grab the vectors associated with second and third\n",
-    "                                                        # largest eigenvalues\n",
+    "b_coords = np.matmul(fPCA.components_[:, 1:3].T, backgrounds.T) \n",
     "plt.scatter(coords[0], coords[1], s=6, c='black', label='Faces')\n",
     "plt.scatter(b_coords[0], b_coords[1], s=6, c='gray', label='Backgrounds')\n",
     "plt.legend()\n",
@@ -234,10 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2429, 361)\n",
+      "(2, 2429)\n",
+      "(361,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
